--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ svg {
  /* setting the initial content attributes here */
  /* start initial design with mobile design first */
  body {
-  background-image: url(images/pattern-background-desktop.svg);
+  background-image: url(images/pattern-background-mobile.svg);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,7 +102,7 @@ svg {
 
 section {
   background-color: white;
-  width: 320px;
+  min-width: 350px;
   max-width: 450;
   border-radius: 0 0 5px 5px;
 }
@@ -205,4 +205,10 @@ h2 {
   text-decoration: none;
 }
 
+@media (min-width: 450px) {
 
+  body {
+    background-image: url(images/pattern-background-desktop.svg);
+  }
+
+}
